# ipbd-responsi-uts

./: .gitignore  README.md
api-wired/: main.py  pyproject.toml  wired_articles_final.json
prefect-dag/: compose.yaml  pyproject.toml
prefect-dag/flows/: etl.py
prefect-dag/postgres-init/database/: 00-ddl.sql
prefect-dag/scripts/: queries.sql
scraping-wired/: pyproject.toml  scrape.py  wired_articles_final.json
scraping-wired/__marimo__/session/: scrape.py.json
