[project]
name = "scraping-wired"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.73.1",
    "marimo>=0.23.2",
    "pandas>=3.0.2",
    "pydantic-ai-slim>=1.85.1",
    "ruff>=0.15.11",
    "selenium>=4.43.0",
    "undetected-chromedriver>=3.5.5",
]
